...
    //RecipeNameScreen
    <string name="create_your_recipe">Create your recipe</string>
    <string name="create_recipe_description">Create a recipe that others can discover and enjoy. Start by giving your dish a name!</string>
    <string name="recipe_name_label">Name of the recipe</string>
    <string name="recipe_name_hint">Choose a catchy title that reflects your dish</string>
    <string name="recipe_name_error">Please enter a recipe name</string>
    <string name="next_step">Next Step</string>

    //ChefImage
    <string name="chef_standing_description">Chef standing</string>

    //AddInstructionStepScreen
    <string name="step_label">Step</string>
    <string name="time_label">Time (min)</string>
    <string name="instruction_label">Instruction</string>
    <string name="save_label">Save</string>
    <string name="add_step">Add Step</string>
    <string name="error_message_empty_instruction">Please enter an instruction</string>

    //IconDropDownMenu
    <string name="add_icon">Add Icon</string>
    <string name="dropdown_icon">DropDown Icon</string>
...
    //RecipeListIngredientsScreen
    <string name="scanner_instruction">Scanner Icon</string>
    <string name="result">Result</string>
    <string name="pop_up_title">Add to Recipe?</string>
    <string name="pop_up_description">Do you want to add this ingredient to your recipe?</string>
    <string name="pop_up_confirmation">Add to Recipe</string>
    <string name="pop_up_cancel">Cancel</string>
    <string name="pop_up_message_no_quantity">All ingredients must have a quantity</string>
    <string name="pop_up_message_no_ingredient">Please add at least one ingredient</string>

    //RecipeListScreen
    <string name="ingredient_list">Ingredients list</string>
    <string name="add">Add</string>
    <string name="close">Close</string>

    //PlateSwipeDropdownMenu
    <string name="no_item_selected">None selected</string>

    //RemoveRecipePopUp
...
    <string name="minutes">Minutes</string>
    <string name="hours">Hours</string>

    //EditAccountScreen
    <string name="save_changes_button">Save changes</string>
    <string name="date_of_birth_label">Date of birth</string>
    <string name="confirm_date_of_birth_pop_up">Confirm</string>
    <string name="cancel_date_of_birth_pop_up">Cancel</string>
    <string name="username_label">Username</string>
    <string name="email_label">Email</string>

    //Fridge
    <string name="fridge_title">Fridge</string>
    <string name="empty_fridge_title">Empty Fridge</string>
    <string name="empty_fridge_description">Your fridge is currently empty, click below to add ingredient</string>
    <string name="date_pattern">dd/MM/yyyy</string>
    <string name="save">Save</string>
    <string name="confirm">Confirm</string>
    <string name="expiration_date">Expiration Date:</string>
    <string name="pop_up_title_fridge">Add to fridge?</string>
    <string name="pop_up_description_fridge">Do you want to add this ingredient to your fridge?</string>
    <string name="pop_up_confirmation_fridge">Add to fridge</string>
    <string name="expired">Expired</string>


...
