...
      const val TIME_RANGE_CHIP = "timeRangeChip"
      const val DIFFICULTY_CHIP = "difficultyChip"
      const val CATEGORY_CHIP = "categoryChip"
      const val RECIPE_IMAGE_1 = "recipeImage1"
      const val RECIPE_IMAGE_2 = "recipeImage2"
      const val DRAGGABLE_ITEM = "draggableItem"
      const val RECIPE_NAME = "recipeName"
      const val RECIPE_FRIDGE_INGREDIENTS = "recipeFridgeIngredients"
      const val RECIPE_FRIDGE_INGREDIENTS_TEXT = "recipeFridgeIngredientsText"
      const val VIEW_RECIPE_BUTTON = "viewRecipeButton"
      const val DELETE_SUFFIX = "Delete"
    }

...
      const val INSTRUCTION_TIME = "InstructionTime"
      const val EDIT_INSTRUCTION_ICON = "EditInstructionIcon"
      const val INSTRUCTION_TEXT = "InstructionsText"
      const val RECIPE_NAME_TEXT = "RecipeNameText"
      const val INSTRUCTION_LIST = "InstructionList"
      const val INSTRUCTION_LIST_ITEM = "InstructionListItem"
      const val NEXT_STEP_BUTTON = "NextStepButton"
      const val RECIPE_LIST_INSTRUCTIONS_SCREEN_SPACER1 = "RecipeListInstructionsScreenSpacer1"
      const val RECIPE_LIST_ITEM_THUMBNAIL = "InstructionThumbnail"
      const val RECIPE_LIST_INSTRUCTION_ICON = "InstructionIcon"
      const val ADD_INSTRUCTION_BUTTON = "AddInstructionButton"
      const val ADD_ICON_DESCRIPTION = "Add"
      const val EDIT_ICON_DESCRIPTION = "Edit"
...
      const val CONFIRMATION_BUTTON = "confirmButton"
      const val CANCEL_BUTTON = "cancelButton"
    }

    object IngredientListScreen {
      const val RECIPE_NAME = "recipeName"
      const val ADD_INGREDIENT_ICON = "addIngredientIcon"
      const val NEXT_STEP_BUTTON = "nextStepButton"
    }

    object FilterPage {
      const val TEST_TAG_TIME_RANGE_SLIDER = "timeRangeSlider"
      const val TEST_TAG_DIFFICULTY = "difficulty"
...
